--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ include 'kodilla-testing'
 include 'kodilla-testing:user'
 findProject(':kodilla-testing:user')?.name = 'user'
 include 'kodilla-stream'
+include 'exception'
+include 'kodilla-exception'
 
