--- a/kodilla-spring/build.gradle
+++ b/kodilla-spring/build.gradle
@@ -1,10 +1,10 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
 }
 
-group = 'com.kodilla'
+group = 'com.kodilla.spring'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
-
+    implementation 'org.springframework.boot:spring-boot-starter'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testng:testng:7.1.0'
 }
 
 tasks.named('test') {
