--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include 'TicTacToeConsole'
 include 'kodilla-rps'
 include 'kodilla-good-patterns'
 include 'kodilla-spring'
+include 'kodilla-spring-web'
