--- a/kodilla-spring-web/build.gradle
+++ b/kodilla-spring-web/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
-group = 'com.kodilla'
+group = 'com.kodilla.spring'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testng:testng:7.1.0'
 }
 
 tasks.named('test') {
