--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.testng:testng:7.1.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.8.0'
 }
