--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,6 @@ include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
 include 'kodilla-sudoku'
+include 'kodilla-patterns2'
+include 'kodilla.patterns2'
 
