--- a/kodilla-jdbc/build.gradle
+++ b/kodilla-jdbc/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.8.0'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
